# vrcapi-proxy

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yaml
migrations/: 000_init.sql
src/: consts.rs  cors.rs  data.rs  database.rs  fetch_friends.rs  fetcher.rs  general.rs  global.rs  init.rs  macros.rs  main.rs  notification.rs  stream.rs  types.rs  unsanitizer.rs  user.rs  validate.rs
src/api/: auth.rs  favorites.rs  friend_accept.rs  friend_request.rs  friend_status.rs  friends.rs  group.rs  instance.rs  invite.rs  mod.rs  notifications.rs  response.rs  search_user.rs  toggle_askme.rs  two_factor.rs  two_factor_email.rs  update_profile.rs  user.rs  utils.rs  world.rs
src/api/internal/: fetch_friends.rs  init_var.rs  mod.rs  user_info.rs
src/global/: mod.rs  struct_impl.rs  variable.rs
src/websocket/: client.rs  error.rs  mod.rs  server.rs  spawn_client.rs  stream.rs  structs.rs  to_user.rs
src/websocket/backend/: handler.rs
src/websocket/client/: mod.rs  stream.rs  structs.rs  to_user.rs
src/websocket/server/: handler.rs
