[package]
name = "vrcapi_proxy"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/yu256/axum/", rev = "bf94eb7636540516f49f56b36bf5752ffd61beff", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures = "*"
native-tls = "*"
anyhow = "*"
base64 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dirs-2 = "*"
trie-match = "*"
aho-corasick = "*"
chrono = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "*", features = ["json"] }
